smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-key.smithy
// Parse error at line 2, column 2 near `!f`: Expected a valid identifier character, but found '!'
$!foo: "1.0"
